getFirst() => get[0] and added exceptions for loadQuestionsFromXML